Switch to openJDK 15