@@ -4,12 +4,6 @@
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>Gustini</groupId>
-		<artifactId>gustini.library</artifactId>
-		<version>latest</version>
-	</parent>
-	<groupId>Gustini</groupId>
 	<artifactId>gustini.library.meinEinkaufApi</artifactId>
 	<version>1.0.1</version>
 	<name>gustini.library.meinEinkaufApi</name>
@@ -17,6 +11,25 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	
+		<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<!-- <source>1.8</source> -->
+					<release>15</release>
+					<compilerArgs>
+						--enable-preview
+					</compilerArgs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -45,12 +58,24 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
+			<!-- <version>20201115</version> -->
 			<version>20180813</version>
 		</dependency>
+<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency>
+
+
+
+		
 	</dependencies>
 	<description>13.11.2019 Release Version 1.0.0
 -&gt; MeinEinkaufApi Implementation
 
 21.01.2020 Release Version 1.0.1
 -&gt; Several small bugfixes</description>
+	<groupId>Gustini</groupId>
 </project>
